--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/bookstore
 spring.datasource.username=root
 spring.datasource.password=${password}
+
+management.endpoints.web.exposure.include=*
+info.app.name=Spring Bookstore Application
+info.app.description=This is a spring boot application for Jx Sprint Challenge 3. 
+info.app.version=1.0.0
